Ticket #16 issue #2: adding new become buyer page and fixed issue with tos not defaulting to proper display

--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -1,9 +1,9 @@
 %div#footer.yui3-g
   %div#f_left.yui3-u-2-3
-    %h5 Call eHouseOffers.com today for a Free Cash Home Offer 866.384.9068
+    %h5 Call Today for a Free Cash Home Offer 866.384.9068
 
     %p
-      = raw "or, #{link_to 'contact us directly', about_path(:anchor => :contact_us)} &amp; learn more about becoming a Certified Home Buyer with eHouseOffers.com"
+      = raw "or, contact us to find out how to #{link_to 'become a home buyer', become_a_buyer_path}"
 
     %p
       = image_tag '/images/transparent.gif', :id => 'copyright', :class => 'app_sprite', :alt => '&copy;'
