Ticket #21: Abbreviated URL Structure for Detail Pages (i.e. /s, /t, /r, etc.)

--- a/app/views/layouts/application/_menu.haml
+++ b/app/views/layouts/application/_menu.haml
@@ -1,7 +1,6 @@
-
 %ul
   - %w[home trends spotlights reasons guides].each do |section|
     %li
       - img = image_tag '/images/transparent.gif', :id => section, :class => "app_sprite #{active_section?(section) ? 'selected' : ''}", :alt => section.capitalize
-      - path= send("#{section}_path")
+      - path= send("#{section}_seo_path")
       = link_to_unless current_page?(path) && params[:page].to_i<2, img, path
