--- a/app/views/seller_listings/homeoffer2.haml
+++ b/app/views/seller_listings/homeoffer2.haml
@@ -1,5 +1,5 @@
 :ruby
-  extra_css('comp_data')
+  extra_css('homeoffer2')
 
 %div#step_two_contentC
   %div.box
@@ -7,7 +7,7 @@
       = image_tag '/images/transparent.gif', :id => 'step_two_comps', :class => 'sprite', :alt => 'Step 2: Help Identify Comparable Homes'
 
       %div#form_gutter
-        = render :partial => 'seller_listings/comp_data'
+        = render :partial => 'seller_listings/homeoffer2'
 
   %hr.space
   %div.box
