--- a/app/views/seller_listings/homeoffer3.haml
+++ b/app/views/seller_listings/homeoffer3.haml
@@ -1,5 +1,5 @@
 :ruby
-  extra_css('thank_you')
+  extra_css('homeoffer3')
 
 -# Until we get the image pieces, use one big image
   %div.box_contentC
