--- a/public/stylesheets/sass/_quotes_row.scss
+++ b/public/stylesheets/sass/_quotes_row.scss
@@ -1,4 +1,4 @@
-/* FIXME -- this is currently used in home, comp_data and thank_you and each page has their own version of this.
+/* FIXME -- this is currently used in home, homeoffer2 and thank_you and each page has their own version of this.
              cleanup each page's own css and import this one file */
 #quotes_rowC {
     margin : 20px 0 0 7%;
