--- a/app/views/layouts/application/_header.haml
+++ b/app/views/layouts/application/_header.haml
@@ -12,5 +12,5 @@
           Qualified Local Buyer
       %div.yui3-u-1-3
         - offer_btn = image_tag '/images/transparent.gif', :id => 'request_offer', :class => 'app_sprite', :alt => 'Request an Offer'
-        = link_to offer_btn, new_seller_listing_path
+        = link_to offer_btn, new_home_offer_path
     = image_tag '/images/transparent.gif', :id => 'free_consult', :class => 'app_sprite', :alt => 'Call 866.384.9068'
