--- a/app/views/shared/_seller_signup.haml
+++ b/app/views/shared/_seller_signup.haml
@@ -1,12 +1,9 @@
 %div.seller_signup_boxC.box
   %div.gutter
-    = image_tag '/images/get_a_cash_offer_on_your_house_today.png', :alt => 'Get a cash offer on your house today!'
+    = image_tag '/images/transparent.gif', :id => 'get_offer_narrow', :class => 'sprite', :alt => 'Get a cash offer on your house today!'
 
     %p
       Find a home buyer in 3 easy steps!
-
-    %strong
-      Sell Your House Today!
 
     %span.shared_seller_signup
       = render :partial => 'seller_listings/form'
