--- a/app/views/seller_listings/_homeoffer2.haml
+++ b/app/views/seller_listings/_homeoffer2.haml
@@ -74,3 +74,7 @@
       = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'last', :alt => 'Verisign'
 
 
+:javascript
+  $(document).ready(function() {
+    $('input#seller_listing_estimated_value').focus();
+  });
