--- a/app/views/shared/_quotes_row.haml
+++ b/app/views/shared/_quotes_row.haml
@@ -1,6 +1,6 @@
-%div#quotes_rowC
-  %div.yui3-u-1-2
-    = image_tag '/images/transparent.gif', :id => 'other_others_quote', :class => 'sprite', :alt => 'Unlike Other Real Estate Investors...'
+%div.quotes_rowC.clearfix
+  %div
+    = image_tag '/images/transparent.gif', :id => 'unlike_others', :alt => 'Unlike Other Real Estate Investors...'
     %p
       The experienced home buyers at eHouseOffers meet unparalleled financial and real estate qualifications. Their
       honesty & helpfulness make informed home sales easy.
@@ -8,8 +8,8 @@
     %p.author
       Cleveland M, Seattle WA
 
-  %div.yui3-u-1-2
-    = image_tag '/images/transparent.gif', :id => 'top_pick_quote', :class => 'sprite', :alt => 'A Top Pick to Sell Your House'
+  %div
+    = image_tag '/images/transparent.gif', :id => 'a_top_pick', :alt => 'A Top Pick to Sell Your House'
     %p
       It was exactly what we were looking for. We got a cash offer as well as a ton of information to help us if we
       decided not to sell. We accepted and closed 12 days later!
