--- a/public/stylesheets/sass/_quotes_row.scss
+++ b/public/stylesheets/sass/_quotes_row.scss
@@ -1,12 +1,26 @@
-/* FIXME -- this is currently used in home, homeoffer2 and thank_you and each page has their own version of this.
-             cleanup each page's own css and import this one file */
-#quotes_rowC {
+.quotes_rowC {
     margin : 20px 0 0 7%;
+    letter-spacing : 0em;
+    word-spacing : 0em;
 }
-#quotes_rowC p {
+.quotes_rowC > div {
+    width : 49.5%;
+    float : left;
+}
+.quotes_rowC #unlike_others {
+    @include sprite('quotes', 0, 0,  22, 328);
+}
+.quotes_rowC #a_top_pick {
+    @include sprite('quotes', 0, -23,  22, 340);
+}
+.quotes_rowC p {
+    font-size : .85em;
     padding-right : 20px;
 }
-#quotes_rowC p.author {
+.quotes_rowC p.author {
+    font-size : .85em;
     padding-left : 20px;
     color : #969696;
 }
+
+
