1) updated the extra_css/js stuff to hopefully snuff out a bug specific to staging 2) fixed some broken security icons in second step of new seller pipeline

--- a/app/views/seller_listings/_homeoffer2.haml
+++ b/app/views/seller_listings/_homeoffer2.haml
@@ -65,13 +65,14 @@
 
   .submitC
     = image_submit_tag '/images/transparent.gif', :id => 'make_offer'
-
     #securityC
-      = image_tag '/images/transparent.gif', :id => 'lock_icon', :alt => 'Secure!'
+      = image_tag '/images/transparent.gif', :class => 'locked_secure', :alt => 'Secure!'
     #security_iconsC
-      = image_tag '/images/transparent.gif', :id => 'mcafee', :alt => 'McAfee'
-      = image_tag '/images/transparent.gif', :id => 'truste', :alt => 'Truste Certified Privacy'
-      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'last', :alt => 'Verisign'
+      = image_tag '/images/transparent.gif', :class => 'mcafee_icon', :alt => 'McAfee'
+      = image_tag '/images/transparent.gif', :class => 'truste_icon', :alt => 'Truste Certified Privacy'
+      = image_tag '/images/transparent.gif', :class => 'verisign_icon', :alt => 'Verisign'
+
+
 
 
 :javascript
