--- a/app/views/seller_listings/new.html.haml
+++ b/app/views/seller_listings/new.html.haml
@@ -1,6 +1,6 @@
 :ruby
   # extra_css('new_seller_listing')
-  extra_css('home_offer_1')
+  extra_css('homeoffer1')
 
 %div#step_one_contentC
   %div.box
