1) truncate teasers for spotlight and guides to 165 2) set maxlength to 165 for spotlight edit 3) fix spotlight edit 'go to spotlight' link

--- a/app/views/seller_listings/_form.html.haml
+++ b/app/views/seller_listings/_form.html.haml
@@ -59,7 +59,8 @@
   jQuery.placefinder_by_zip_path = "#{placefinder_by_zip_path}";
 
   $(document).ready(function() {
-    $('input#seller_listing_user_first_name').focus();    
+    // the scope is specific to the home-offer-1 page
+    $('input#seller_listing_user_first_name', 'div#step_one_contentC').focus();
   });
 
 
