--- a/public/stylesheets/sass/spotlight_forms.scss
+++ b/public/stylesheets/sass/spotlight_forms.scss
@@ -1,4 +1,5 @@
 @import "form_basics";
+@import "form_show";
 @import "edit_qa_collection";
 @import "spotlight_about_form";
 @import "social_profile_form";
