--- a/app/views/spotlights/show/_teaser.haml
+++ b/app/views/spotlights/show/_teaser.haml
@@ -4,7 +4,7 @@
     = render :partial => 'shared/blogs/share_article_on', :locals => {:object => spotlight}
 
   %h2.green= spotlight.title
-  %p= spotlight.teaser
+  %p= spotlight.teaser.truncate(165)
 
   
 
