--- a/public/stylesheets/sass/spotlight.scss
+++ b/public/stylesheets/sass/spotlight.scss
@@ -7,6 +7,7 @@
 @import "boxed_resource_list";
 @import "add_badge";
 @import "spotlight_header";
+@import "social_icons";
 
 /* Start Page Sprite Elements */
 #mic_icon {
