--- a/app/views/spotlights/show/_social_profiles.haml
+++ b/app/views/spotlights/show/_social_profiles.haml
@@ -10,5 +10,6 @@
   %div#all_profilesC
     %ul.clearfix
       - spotlight.social_profiles.each do |social_profile|
-        - img = image_tag '/images/transparent.gif', :id => "#{social_profile.website}L", :alt => social_profile.website.capitalize
+        - img = image_tag '/images/transparent.gif', :class => "#{social_profile.website}_icon", :alt => social_profile.website.capitalize
         %li{:id => "sp_#{social_profile.id}"}= link_to img, social_profile.url
+
