--- a/public/stylesheets/sass/_add_badge.scss
+++ b/public/stylesheets/sass/_add_badge.scss
@@ -13,12 +13,8 @@
 .add_badgeC small {
     font-size : .7em;
 }
-.add_badgeC .featured {
-    @include sprite('add_badge',0,0,89,111);
-    margin : 4px 0 12px;
-}
-.add_badgeC .copy_embed_code {
-    @include sprite('add_badge',0,-89,35,128);
+.add_badgeC img {
+    margin : 15px 0;
 }
 .add_badgeC textarea.copyC {
     width : 90%;
