Fixed some small issues with spotlight show page

--- a/app/views/shared/blogs/_share_this_image.haml
+++ b/app/views/shared/blogs/_share_this_image.haml
@@ -6,7 +6,7 @@
 
 %div.box
   %div.gutter
-    %strong Use This Image
+    %strong Use this Image
 
     %textarea.copy_image_code= copy_code
     %div.footnote
