Added /admin/uploaded_photos so we can upload images via the ckeditor and view them in the admin panel. added this to the blog and spotlight form pages

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -27,3 +27,7 @@
   %tr
     %td User Phone Numbers
     %td= link_to "View", phone_numbers_path
+
+  %tr
+    %td Uploaded Photos
+    %td= link_to "View", admin_uploaded_photos_path
