1) ability to delete a blog or spotlight 2) 404 if article cannot be found 3) truncate breadcrumbs to 40 chars max

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -38,7 +38,7 @@
     = stylesheet_link_tag :defaults
     = yield(:extra_css) if content_for?(:extra_css)
 
-    = javascript_include_tag :defaults
+    = javascript_include_tag :defaults, 'jquery.growl'
     = yield(:extra_js) if content_for?(:extra_js)
 
     :plain
