--- a/app/views/blogs/show.haml
+++ b/app/views/blogs/show.haml
@@ -11,6 +11,8 @@
   = link_to "Edit This Article", construct_blog_path(@blog, :edit)
   \|
   = link_to "Create New Guide", construct_blog_path(@blog, :new)
+  \|
+  = link_to 'Delete', construct_blog_path(@blog, :delete), :confirm => 'Are you sure?', :method => :delete
 
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [@blog.context, construct_blog_path(@blog, :index)], ["#{@blog.title}", nil]]
 
