--- a/app/views/guides/show.haml
+++ b/app/views/guides/show.haml
@@ -11,6 +11,8 @@
   = link_to "Edit This Article", construct_blog_path(@blog, :edit)
   \|
   = link_to "Create New #{name_for_context}", construct_blog_path(nil, :new, @context)
+  \|
+  = link_to 'Delete', construct_blog_path(@blog, :delete), :confirm => 'Are you sure?', :method => :delete
 
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:guides, guides_path], ["#{@blog.title}", nil]]
 
