Overhaul to emailing stuff. this will likely break but we need to test some new (copied) config on staging and the after_symlink hook that symlinks shared config stuff

--- a/app/views/mailer/send_us_their_email.html.haml
+++ b/app/views/mailer/send_us_their_email.html.haml
@@ -1,4 +1,1 @@
-= "A Message from #{@message.name} <#{@message.email}>,"
-
-%p{:style => 'border:solid 1px #123;background-color:#dadada;padding:10px;white-space:pre'}
-  = @message.body
+= render :partial => 'html_email_template', :locals => {:body => @message.body}
