--- a/app/views/mailer/user_contact_confirmation.text.haml
+++ b/app/views/mailer/user_contact_confirmation.text.haml
@@ -1,5 +1,5 @@
 = "Hello #{@message.name},"
 
 We have received your email and will be responding as quickly as we can. Thank you for contacting us!
-
-= "eHouseOffers.com #{root_url}"
+ 
+= render :partial => 'text_footer'
