--- a/public/stylesheets/sass/_box.scss
+++ b/public/stylesheets/sass/_box.scss
@@ -12,7 +12,7 @@
 }
 .box strong {
     display : block;
-    font-size : 0.85em;
+/*    font-size : 0.85em;*/
     font-weight : bold;
     margin-bottom : 9px;
 }
