small fix -- use message, not @message

--- a/app/views/mailer/_user_contact_confirmation.haml
+++ b/app/views/mailer/_user_contact_confirmation.haml
@@ -1,2 +1,2 @@
-%h1= "Hello #{@message.name},"
+%h1= "Hello #{message.name},"
 %p We have received your email and will be responding as quickly as we can. Thank you for contacting us!
