Ticket #13: adding content to spotlight, teaser on the index page and content on the detail page with wysiwyg for content on spotlight edit form

--- a/app/views/spotlights/index/_spotlight.haml
+++ b/app/views/spotlights/index/_spotlight.haml
@@ -8,7 +8,7 @@
       = link_to raw(spotlight.title), spotlight_path(spotlight.title_for_url)
 
     %p.grey85.teaser
-      = spotlight.teaser
+      = spotlight.teaser.truncate(165)
 
     = link_to image_tag('/images/transparent.gif', :class => 'read_full_article', :alt => 'Read Full Article'), spotlight_path(spotlight.title_for_url)
     
