--- a/app/views/spotlights/show/_spotlight.haml
+++ b/app/views/spotlights/show/_spotlight.haml
@@ -1,6 +1,6 @@
 
 %div#spotlightC
-  = render :partial => "spotlights/show/teaser", :locals => {:spotlight => spotlight}
+  = render :partial => "spotlights/show/intro", :locals => {:spotlight => spotlight}
 
   - if spotlight.qas.present?
     %hr
