--- a/public/stylesheets/sass/spotlight.scss
+++ b/public/stylesheets/sass/spotlight.scss
@@ -36,6 +36,7 @@ div#spotlightC p {
     color : $grey;
     font-size : .85em;
     line-height : 1.6em;
+    margin-bottom : 1em;
 }
 #teaserC #main_spotlight_imageC {
     padding : 0 20px 20px 0;
