--- a/app/views/spotlights/_form.html.haml
+++ b/app/views/spotlights/_form.html.haml
@@ -1,7 +1,6 @@
 :ruby
   # TODO -- younker [2011-01-04 14:31] -- make the QA answer fields ckeditor-able
-  # extra_js('url_friendly_string','jquery.growl','/ckeditor/ckeditor.js','/ckeditor/adapters/jquery.js')
-  extra_js('url_friendly_string','jquery.growl')
+  extra_js('url_friendly_string','jquery.growl','/ckeditor/ckeditor.js','/ckeditor/adapters/jquery.js')
 
 = form_for @spotlight, :html => {:multipart => true} do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => @spotlight}
@@ -28,6 +27,11 @@
   .field.half_height
     = f.label :teaser
     = f.text_field :teaser, :maxlength => 165, 'data-validation' => 'validate(required)'
+
+  .field
+    = f.label :content
+    = f.text_area :content, :class => 'editor'
+
 
   .field.yui3-g
     - if @spotlight.photo?
